--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -19,6 +19,7 @@
             <div class="form-group">
                 <label for="CPF">CPF:</label>
                 <input required="required" type="text" class="form-control" id="CPF" name="CPF" placeholder="Ex.: 012.345.678-90" maxlength="14">
+                <div id="validacaoCPF"></div>
             </div>
         </div>
         <div class="col-md-6">
