--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -1,4 +1,6 @@
-﻿
+﻿<div id="modalBeneficiarioConteudo"></div>
+
+
 <form id="formCadastro" method="post">
     <div class="row">
         <div class="col-md-6">
@@ -82,7 +84,7 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="pull-left">
-                @Html.ActionLink("Beneficiários", "Incluir", "Cliente", new { }, new { @class = "btn btn-sm btn-primary pull-left" })
+                <button type="button" class="btn btn-primary" id="btnExibirModalBeneficiario">Beneficiários</button>
             </div>
         </div>
         <div class="col-lg-6">
