--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -20,7 +20,7 @@
         <div class="col-md-6">
             <div class="form-group">
                 <label for="CPF">CPF:</label>
-                <input required="required" type="text" class="form-control" id="CPF" name="CPF" placeholder="Ex.: 012.345.678-90" maxlength="14">
+                <input required="required" type="text" class="form-control cpf-masc" id="CPF" name="CPF" placeholder="Ex.: 012.345.678-90" maxlength="14">
             </div>
         </div>
         <div class="col-md-6">
