Corrigindo bug de multiplos cliques em incluir e ajustando modal em Cadastrar Novo Cliente, organização de arquivos

--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
@@ -55,8 +55,8 @@
                                     <td>@beneficiario.CPF</td>
                                     <td>@beneficiario.Nome</td>
                                     <td>
-                                        <button type="button" class="btn btn-primary">Alterar</button>
-                                        <button type="button" class="btn btn-primary">Excluir</button>
+                                        <button type="button" id="@beneficiario.Id" class="btn btn-primary alterar-beneficiario">Alterar</button>
+                                        <button type="button" id="@beneficiario.Id" class="btn btn-primary excluir-beneficiario">Excluir</button>
                                     </td>
                                 </tr>
                             }
