Agora os campos beneficiarios se comportam como formulário

--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
@@ -1,5 +1,6 @@
 @model List<WebAtividadeEntrevista.Models.BeneficiarioModel>
 
+<form id="formBeneficiario">
 <div id="modalBeneficiario" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -33,7 +34,7 @@
                     </div>
                     <div class="col-md-2">
                         <div class="form-group">
-                            <button type="button" id="btnIncluirBeneficiario" class="btn btn-sm btn-success">Incluir</button>
+                            <button type="submit" id="btnIncluirBeneficiario" class="btn btn-sm btn-success">Incluir</button>
                         </div>
                     </div>
 
@@ -68,4 +69,4 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div> <!-- /.modal -->
-
+</form>
