Correção de barreira da validação CPF em alterar cliente

--- a/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Cliente/Forms.cshtml
@@ -2,6 +2,7 @@
 
 
 <form id="formCadastro" method="post">
+    <input type="text"  id="Id" name="Id" style="display: none;">
     <div class="row">
         <div class="col-md-6">
             <div class="form-group">
