Remoção do botao alterar, por motivos de n ter nenhuma ação necessária

--- a/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
+++ b/FI.WebAtividadeEntrevista/Views/Beneficiario/Modal.cshtml
@@ -56,8 +56,7 @@
                                     <td>@beneficiario.CPF</td>
                                     <td>@beneficiario.Nome</td>
                                     <td>
-                                        <button type="button" id="@beneficiario.Id" class="btn btn-primary alterar-beneficiario">Alterar</button>
-                                        <button type="button" id="@beneficiario.Id" class="btn btn-primary excluir-beneficiario">Excluir</button>
+                                        <button type="button" id="@beneficiario.Id" class="btn btn-danger excluir-beneficiario">Excluir</button>
                                     </td>
                                 </tr>
                             }
